[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/bossface.gd" type="Script" id=1]
[ext_resource path="res://images/enemies/bossface.png" type="Texture" id=2]
[ext_resource path="res://audio/hurt2.wav" type="Sample" id=3]
[ext_resource path="res://images/cutscenes/text_boxes/stopped.png" type="Texture" id=4]
[ext_resource path="res://images/cutscenes/text_boxes/report.png" type="Texture" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -37.5235, -28.4971, 34.6529, -32.3985, 35.6012, 45.9228, -39.6609, 26.9973 )

[sub_resource type="Animation" id=2]

resource/name = "damage1"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4, 0.6, 0.9, 1.1, 1.4 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 3, 4, 5, 3, 4, 3, 5 ] }

[sub_resource type="Animation" id=3]

resource/name = "damage2"
length = 1.5
loop = false
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 6, 7, 8, 6, 7, 8, 6, 7 ] }

[sub_resource type="Animation" id=4]

resource/name = "damage3"
length = 1.5
loop = false
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 9, 10, 11, 9, 10, 11, 9, 10 ] }

[sub_resource type="Animation" id=5]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 0, 1, 2, 1, 2, 0, 1, 0, 2 ] }

[sub_resource type="SampleLibrary" id=6]

samples/hurt = { "db":0.0, "pitch":1.0, "sample":ExtResource( 3 ) }

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 28.3314, 39.9355 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 15.1276, 17.0488 )

[sub_resource type="ColorRamp" id=9]

offsets = FloatArray( 0, 0.216374 )
colors = ColorArray( 0, 0, 0, 0, 1, 1, 1, 1 )

[node name="bossface" type="KinematicBody2D" groups=[ "enemies" ]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 3
hframes = 5
frame = 9

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( -37.5235, -28.4971, 34.6529, -32.3985, 35.6012, 45.9228, -39.6609, 26.9973 )
shape_range = Vector2( 0, 0 )
trigger = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/damage1 = SubResource( 2 )
anims/damage2 = SubResource( 3 )
anims/damage3 = SubResource( 4 )
anims/idle = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 6 )
config/pitch_random = 0.0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 20.6861, 6.60193 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 8 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, -22.0065, 11.0032 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( 20.6861, 6.60193 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( -22.0065, 11.0032 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 1

[node name="Particles2D" type="Particles2D" parent="."]

config/amount = 30
config/lifetime = 1.0
config/preprocess = 2.0
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 200.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 5.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 9 )

[node name="text_1" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( -69.2364, -30.4122 )
z/z = 100
texture = ExtResource( 4 )

[node name="text_2" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( -69.2364, -30.4122 )
z/z = 100
texture = ExtResource( 5 )

[node name="text_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false


